<resources>
    <string name="app_name">Shared Bill Helper</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="random_text">A tank is a large type of armoured fighting vehicle with tracks, designed for front-line combat. Modern tanks are strong mobile land weapons platforms, mounting a large-calibre cannon in a rotating gun turret. They combine this with heavy vehicle armour providing protection for the crew of the weapon and operational mobility, which allows them to position on the battlefield in advantageous locations. These features enable the tank to have enormous capability to perform well in a tactical situation: the combination of strong weapons fire from their tank gun and their ability to resist enemy fire means the tank can take hold of and control an area of the battle and prevent other enemy vehicles from advancing, for example. In both offensive and defensive roles, they are powerful units able to perform all primary tasks[which?] required of armoured troops on the battlefield.[1] The modern tank was the result of a century of development from primitive armoured vehicles, due to improvements in technology such as the internal combustion engine, which allowed the rapid movement of heavy equipment required to construct armoured vehicles. As a result of these advances, tanks underwent tremendous shifts in capability during the World Wars of the 20th century. Tanks in World War I were developed separately and simultaneously by Great Britain [2] and France as a means to break the deadlock of trench warfare on the Western Front. Their first use in combat was by the British Army on 15 September 1916 between the villages of Flers and Courcelette, during the Battle of the Somme. The name was adopted by the British during the early stages of their development, as a security measure to conceal their purpose (see etymology). While the French and British built thousands of tanks between them, Germany was unconvinced of the tank\'s potential, and built only twenty of her own. Tanks of the interwar period evolved into the designs of World War II. Important concepts of armoured warfare were developed; the Soviet Union launched the first mass tank/air attack at Khalkhin Gol (Nomonhan) in August 1939,[3] which later resulted in the T-34, a predecessor of the main battle tank. Less than two weeks later, Germany began their large-scale armoured campaigns that would become known as blitzkrieg ( ) – massed concentrations of tanks supported by motorised and mechanized infantry, artillery and air power designed to break through the enemy front and collapse enemy resistance. The widespread introduction of HEAT warheads during the second half of WWII led to lightweight anti-tank weapons with considerable power. This caused major changes in tank doctrine and the introduction of effective combined arms tactics. Tanks in the Cold War were designed with these weapons in mind, and led to greatly improved armours during the 1960s, especially composite armour. Improved engines, transmissions and suspensions allowed tanks of this period to grow larger. Aspects of gun technology changed significantly as well, with advances in shell design. During the 20th century, main battle tanks were considered a key component of modern armies.[4] In the 21st century, with the increasing role of asymmetrical warfare and the end of the Cold War, that also contributed to the increase of cost-effective Russian anti-tank weapons worldwide, the importance of tanks has waned. Modern tanks seldom operate alone, as they are organized into combined arms units which involve the support of infantry, who may accompany the tanks in infantry fighting vehicles. They are also usually supported by reconnaissance or ground-attack aircraft.[5]</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="title_activity_edit_bill">Edit Bill</string>
    <string name="bill_type">Bill Type</string>
    <string name="amount">Amount</string>
    <string name="required">Required</string>
    <string name="pick_date">Pick Date</string>
    <string name="billing_start_date">Billing Start Date</string>
    <string name="billing_end_date">Billing End Date</string>
    <string name="due_date">Due Date</string>
    <string name="not_supplied">Not Supplied</string>
    <string name="done">Done</string>
    <string name="date_picking_mistake">Wrong Date</string>
    <string name="start_date_must_be_before_end_date">Start Date must be earlier than End Date</string>
    <string name="title_activity_view_bill_details">ViewBillDetailsActivity</string>
    <string name="no_value">No Value</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_bill">This bill is going to be deleted!</string>
    <string name="edit_member">Edit Member</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="move_in_date">Move In Date</string>
    <string name="before_billing_start">If not specified, assume moved in before billing starts</string>
    <string name="move_out_date">Move Out Date</string>
    <string name="after_billing_end">If not specified, assume moved out after billing ends</string>
    <string name="title_activity_edit_member">Edit Member</string>
    <string name="member_details">Member Details</string>
    <string name="delete_member">This member is going to be deleted!</string>
    <string name="fields_empty">Required Fields are empty</string>
    <string name="must_fill_fields_member">First Name must not be empty</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_calculation_parameter">Select</string>
    <string name="select_bills">Select Bills (only bills that are marked as unpaid will be shown here)</string>
    <string name="select_members">Select Members</string>
    <string name="no_member_create">You haven\'t created any member, click to create</string>
    <string name="no_bill_create">You haven\'t created any bill, click to create</string>
    <string name="reports">Reports</string>
    <string name="must_fill_fields_bill">Must pick bill start and end dates</string>
    <string name="title_activity_calculation_result">CalculationResultActivity</string>
    <string name="total_amount">Total Amount</string>
    <string name="number_of_members_paying">Number of members are paying</string>
    <string name="number_of_bills">Number of bills paid</string>
    <string name="percentage_0">0%</string>
    <string name="a_century_ago">1900-01-01</string>
    <string name="a_century_later">3000-01-01</string>
    <string name="payment_details">Details</string>
    <string name="to">to</string>
    <string name="paying_from">Paying from</string>
    <string name="paying_days">paying days</string>
    <string name="have_a_good_day">Have a good day!</string>
    <string name="bill">Bill</string>
    <string name="member">Member</string>
    <string name="choose_from_address_book">Add from Contacts</string>
    <string name="send">Send</string>
</resources>
