<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ericliudeveloper.sharedbillhelper.ui.fragment.EditBillFragment">

    <include layout="@layout/appbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/edit_area_margin_side"
            android:layout_marginRight="@dimen/edit_area_margin_side"
            android:elevation="1dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.billshare.BillEditActivity$PlaceholderFragment">

                <TableRow
                    android:layout_margin="@dimen/tabrow_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bill_type"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/spType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_span="1" />
                </TableRow>

                <TableRow
                    android:layout_margin="@dimen/tabrow_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/etAmount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_span="2"
                        android:hint="@string/required"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_margin="@dimen/tabrow_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/billing_start_date" />

                    <TextView
                        android:id="@+id/tvStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:hint="@string/required" />
                </TableRow>

                <Button
                    android:id="@+id/btStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="15dp"
                    android:text="@string/pick_date"
                    android:textSize="15sp" />


                <TableRow
                    android:layout_margin="@dimen/tabrow_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/billing_end_date" />

                    <TextView
                        android:id="@+id/tvEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:hint="@string/required" />
                </TableRow>

                <Button
                    android:id="@+id/btEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="15dp"
                    android:text="@string/pick_date"
                    android:textSize="15sp" />


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/due_date" />

                    <TextView
                        android:id="@+id/tvDueDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:hint="@string/not_supplied" />
                </TableRow>

                <Button
                    android:id="@+id/btDueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="15dp"
                    android:text="@string/pick_date"
                    android:textSize="15sp" />


                <CheckBox
                    android:id="@+id/cbPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/paid" />
            </TableLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>


</LinearLayout>
