<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_to_avoid_being_overlapped_by_fab"
        tools:context="com.ericliu.billshare.PaymentActivity$PlaceholderFragment">

        <TextView
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/total_amount" />

        <TextView
            android:id="@+id/tvSum"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="1"
            android:hint="0.00" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/number_of_members_paying" />

        <TextView
            android:id="@+id/tvNumMember"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="2"
            android:hint="0" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/number_of_bills" />

        <TextView
            android:id="@+id/tvNumBill"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="3"
            android:hint="0" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:background="@android:color/black" />


    </GridLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/list_bottom_margin_to_avoid_being_overlapped_by_navigationbar"
        android:scrollbars="vertical" />

</LinearLayout>